# totem-mediaserver2

./: Makefile.am  autogen.sh  configure.ac  configure.in
src/: Makefile.am  mediaserver2.plugin.in  totem-mediaserver2.c
src/plugins/mediaserver1/: Makefile.am  mediaserver1.totem-plugin.in  totem-mediaserver1.c
src/plugins/mediaserver2/: Makefile.am  mediaserver2.plugin.in  mediaserver2.totem-plugin.in  totem-mediaserver2.c
